[package]
name = "magical-global"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Provide variable sharing like C code"
authors = ["PARADISO <paradiso@ymail.ne.jp>"]
readme = "README.md"
[lints]
workspace = true
[workspace]
members = [
  "magical-global-sys",
]
[dependencies]

magical-global-sys = {path="./magical-global-sys"}

[workspace.lints.rust]


[workspace.lints.clippy]
